# libfreesrp

./: .gitignore  .gitlab-ci.yml  87-electronics-kitchen.rules  CMakeLists.txt  COPYING  README.md
cmake/modules/: Findlibusb-1.0.cmake
examples/ctl/: cmds.cpp  cmds.hpp  main.cpp
examples/io/: main.cpp
examples/perftests/: main.cpp
examples/rec/: main.cpp
examples/rec2/: main.cpp
examples/test/: main.cpp
include/: freesrp.hpp
src/: freesrp.cpp  freesrp_impl.cpp  freesrp_impl.hpp  util.cpp
